--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -129,7 +129,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vVj-j9-F2v" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="summaryProgramView" autoresizesArchivedViewToFullSize="NO" id="PMK-i9-AbV" customClass="SummaryProgramViewController" sceneMemberID="viewController">
-                    <view key="view" autoresizesSubviews="NO" contentMode="left" id="ePY-Hs-2pI">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="ePY-Hs-2pI">
                         <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -172,6 +172,21 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </scrollView>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qHA-eI-bTF">
+                                <rect key="frame" x="476" y="355" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="bottomButtonPressed:" destination="PMK-i9-AbV" eventType="touchUpInside" id="c9g-W9-AAj"/>
+                                </connections>
+                            </button>
                             <view userInteractionEnabled="NO" contentMode="left" id="o40-Jc-7bw" userLabel="Menu">
                                 <rect key="frame" x="-1" y="0.0" width="59" height="748"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
@@ -211,23 +226,12 @@
                                             <action selector="menuPlusButton:" destination="PMK-i9-AbV" eventType="touchUpInside" id="RfA-d4-qPk"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qHA-eI-bTF">
-                                        <rect key="frame" x="-7" y="338" width="72" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="button">
-                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -245,14 +249,19 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Lup-rz-HK8" userLabel="mainPanel">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="748"/>
+                                <rect key="frame" x="0.0" y="0.0" width="504" height="748"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <view autoresizesSubviews="NO" contentMode="left" id="5UH-AA-J7K" userLabel="slidingPanelContainer">
-                                <rect key="frame" x="944" y="0.0" width="80" height="748"/>
+                            <view autoresizesSubviews="NO" opaque="NO" contentMode="left" id="5UH-AA-J7K" userLabel="slidingPanelContainer">
+                                <rect key="frame" x="507" y="0.0" width="517" height="748"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" id="1b3-f9-J7a" userLabel="slidingPanel">
+                                        <rect key="frame" x="0.0" y="0.0" width="517" height="748"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" id="3US-dq-c7F" userLabel="slidebar">
                                         <rect key="frame" x="0.0" y="0.0" width="41" height="748"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
@@ -269,16 +278,11 @@
                                             <outletCollection property="gestureRecognizers" destination="NeN-BM-SD6" appends="YES" id="Wx8-UG-FN3"/>
                                         </connections>
                                     </view>
-                                    <view contentMode="right" id="1b3-f9-J7a" userLabel="slidingPanel">
-                                        <rect key="frame" x="40" y="0.0" width="160" height="748"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <navigationItem key="navigationItem" id="Mm2-NJ-DY1"/>
@@ -614,6 +618,7 @@
         <class className="SummaryProgramViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryProgramViewController.h"/>
             <relationships>
+                <relationship kind="action" name="bottomButtonPressed:"/>
                 <relationship kind="action" name="menuPlusButton:"/>
                 <relationship kind="outlet" name="exerciseList" candidateClass="UIScrollView"/>
                 <relationship kind="outlet" name="overlayImage" candidateClass="UIImageView"/>
