--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -321,10 +321,14 @@
                         <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="45dc8608037206cbb7a8fa9648.jpg" id="m3Z-0H-vg6">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="71" sectionHeaderHeight="22" sectionFooterHeight="22" id="xcW-NM-DaJ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="630"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.100645727" green="0.100645727" blue="0.100645727" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="exerciseCell" rowHeight="71" id="Xbx-zI-ek6" customClass="NormalExerciseCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="71"/>
@@ -337,7 +341,7 @@
                                                     <rect key="frame" x="224" y="12" width="91" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.43614799540131355" green="0.37359269100228965" blue="0.83163265306122447" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4e5-Ss-NXg">
@@ -376,18 +380,18 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.70168932338432544" green="1" blue="0.75325248619974117" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.31634646045918369" green="0.31634646045918369" blue="0.31634646045918369" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" id="bFW-8V-XHN">
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" id="bFW-8V-XHN">
                                 <rect key="frame" x="342" y="20" width="662" height="413"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight Exercise Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="2ll-Av-ZmW">
-                                        <rect key="frame" x="465" y="20" width="177" height="56"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight Exercise Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="2ll-Av-ZmW">
+                                        <rect key="frame" x="268" y="20" width="374" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <color key="textColor" red="0.77268287920000001" green="1" blue="0.99995761139999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" id="Nm0-rx-2xY" userLabel="Exercise container">
                                         <rect key="frame" x="20" y="84" width="622" height="219"/>
@@ -432,13 +436,13 @@
                                                         <color key="backgroundColor" red="0.48445873447499171" green="0.55102040816326525" blue="0.49686796615468193" alpha="0.48999999999999999" colorSpace="calibratedRGB"/>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.19387755102040816" green="0.19387755102040816" blue="0.19387755102040816" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.52696387365481834" green="0.54669563139999999" blue="0.43470716419668826" alpha="1" colorSpace="calibratedRGB"/>
@@ -511,6 +515,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="45dc8608037206cbb7a8fa9648.jpg" width="2560" height="1600"/>
         <image name="MB_0019_plus.png" width="256" height="256"/>
     </resources>
     <classes>
