--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -8,8 +8,10 @@
         <scene sceneID="Pca-zg-6OH">
             <objects>
                 <navigationController definesPresentationContext="YES" id="IcP-sJ-r6o" customClass="NavigationViewController" sceneMemberID="viewController">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6Ua-FP-g9e">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="6Ua-FP-g9e">
+                        <rect key="frame" x="0.0" y="-44" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -313,6 +315,56 @@
             </objects>
             <point key="canvasLocation" x="-636" y="-1518"/>
         </scene>
+        <!--Edit Weight Controller-->
+        <scene sceneID="AiU-JN-igg">
+            <objects>
+                <viewController id="nzk-5t-a5x" customClass="EditWeightController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AMT-ep-TbH">
+                        <rect key="frame" x="0.0" y="20" width="108" height="216"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="eNY-Pv-kJq">
+                                <rect key="frame" x="0.0" y="0.0" width="108" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="nzk-5t-a5x" id="xiL-Sw-s6v"/>
+                                    <outlet property="delegate" destination="nzk-5t-a5x" id="6Ut-tJ-VKb"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="edF-ER-wwP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-536" y="62"/>
+        </scene>
+        <!--Edit Name View Controller-->
+        <scene sceneID="lqo-hp-3pg">
+            <objects>
+                <viewController id="Qmn-vo-TBb" customClass="EditNameViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IgT-Rf-pyq">
+                        <rect key="frame" x="0.0" y="20" width="260" height="216"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="WOM-yV-CYy">
+                                <rect key="frame" x="0.0" y="0.0" width="260" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Qmn-vo-TBb" id="wsl-Gk-iGg"/>
+                                    <outlet property="delegate" destination="Qmn-vo-TBb" id="ZXa-bg-diW"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BW7-km-DJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-599" y="431"/>
+        </scene>
         <!--Exercise View Controller-->
         <scene sceneID="QcM-bn-2gg">
             <objects>
@@ -326,7 +378,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="71" sectionHeaderHeight="22" sectionFooterHeight="22" id="xcW-NM-DaJ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="630"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="661"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.100645727" green="0.100645727" blue="0.100645727" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -344,7 +396,7 @@
                                                     <color key="textColor" red="0.43614799540131355" green="0.37359269100228965" blue="0.83163265306122447" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
-                                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4e5-Ss-NXg">
+                                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" id="4e5-Ss-NXg">
                                                     <rect key="frame" x="13" y="12" width="208" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                     <color key="backgroundColor" red="0.82326939450275249" green="0.66926396345770378" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -361,11 +413,11 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" id="jan-Fd-GcT">
-                                <rect key="frame" x="0.0" y="630" width="320" height="74"/>
+                                <rect key="frame" x="0.0" y="661" width="320" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="V0F-mL-SS9">
-                                        <rect key="frame" x="135" y="18" width="37" height="37"/>
+                                        <rect key="frame" x="142" y="3" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" image="MB_0019_plus.png">
@@ -383,26 +435,35 @@
                                 <color key="backgroundColor" red="0.31634646045918369" green="0.31634646045918369" blue="0.31634646045918369" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <view alpha="0.80000000000000004" contentMode="scaleToFill" id="bFW-8V-XHN">
-                                <rect key="frame" x="342" y="20" width="662" height="413"/>
+                                <rect key="frame" x="342" y="20" width="662" height="641"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight Exercise Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="2ll-Av-ZmW">
+                                    <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Weight Exercise Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="2ll-Av-ZmW">
                                         <rect key="frame" x="268" y="20" width="374" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                        <color key="textColor" red="0.77268287920000001" green="1" blue="0.99995761139999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="1" green="0.95470577850708749" blue="0.35413251445249982" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <color key="shadowColor" red="0.54669563139999999" green="0.42245924368800275" blue="0.11603397607304046" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="FNY-uc-jVo" appends="YES" id="8Qd-HK-Zc2"/>
+                                        </connections>
                                     </label>
                                     <view contentMode="scaleToFill" id="Nm0-rx-2xY" userLabel="Exercise container">
                                         <rect key="frame" x="20" y="84" width="622" height="219"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" id="X77-Iw-CAQ">
-                                                <rect key="frame" x="486" y="20" width="116" height="48"/>
+                                            <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Weight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" id="X77-Iw-CAQ">
+                                                <rect key="frame" x="481" y="20" width="121" height="48"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <gestureRecognizers/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.68055791440000002" green="0.01637291917" blue="0.0083494394269999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="hGy-eX-KRJ" appends="YES" id="c9V-GH-poG"/>
+                                                </connections>
                                             </label>
                                             <view contentMode="scaleToFill" id="gCZ-EL-18W">
                                                 <rect key="frame" x="0.0" y="0.0" width="473" height="219"/>
@@ -439,7 +500,7 @@
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.19387755102040816" green="0.19387755102040816" blue="0.19387755102040816" alpha="1" colorSpace="calibratedRGB"/>
@@ -459,6 +520,20 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="36b-EY-YON" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="hGy-eX-KRJ" userLabel="Weight Tap Gesture">
+                    <connections>
+                        <segue destination="nzk-5t-a5x" kind="popover" identifier="editWeight" popoverAnchorView="X77-Iw-CAQ" id="jFy-8i-rFG">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="FNY-uc-jVo" userLabel="Name Tap Gesture">
+                    <connections>
+                        <segue destination="Qmn-vo-TBb" kind="popover" identifier="editName" popoverAnchorView="2ll-Av-ZmW" id="mfz-SV-EO1">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-1847" y="-726"/>
         </scene>
@@ -518,59 +593,6 @@
         <image name="45dc8608037206cbb7a8fa9648.jpg" width="2560" height="1600"/>
         <image name="MB_0019_plus.png" width="256" height="256"/>
     </resources>
-    <classes>
-        <class className="AddExerciseCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddExerciseCell.h"/>
-        </class>
-        <class className="ExerciseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addExercise:"/>
-                <relationship kind="action" name="addSet:"/>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="setContainer" candidateClass="UIView"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="weightLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="FullExerciseCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FullExerciseCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="setsScrollView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="FullProgramViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FullProgramViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addExercise:"/>
-                <relationship kind="action" name="addSet:"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="LoadProgramCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoadProgramCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="LoadProgramViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoadProgramViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="NavigationViewController" superclassName="UINavigationController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationViewController.h"/>
-        </class>
-        <class className="NormalExerciseCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NormalExerciseCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="setsScrollView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
